--- a/mycode/.vscode/settings.json
+++ b/mycode/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "C_Cpp.default.compilerPath": "/usr/bin/gcc"
+    "clangd.fallbackFlags": [
+        "-I${workspaceFolder}/_include/workflow",
+        "-I${workspaceFolder}/_include"
+    ],
+    "clangd.arguments": [
+        "--backgroud-index",
+        "--compile-command-dir=${workspaceFolder}/build.cmake/"
+    ],
+    "cmake.buildDirectory": "${workspaceFolder}/build.cmake",
+    "cmake.buildEnvironment": {"CMAKE_EXPORT_COMPILE_COMMANDS": "ON"}
 }
